--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 370919341853507604
 textchannel = 524877218191638538
 ladderchannel = 
 jungsanchannel = 
