--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,8 +2,8 @@ timezone = 9
 
 voicechannel = 370919341853507604
 textchannel = 524877218191638538
-ladderchannel = 
-jungsanchannel = 
+ladderchannel = 528399069912236045
+jungsanchannel = 549970626782167050
 
 before_alert = 1
 before_alert1 = 5
@@ -14,8 +14,8 @@ bossInfoNum = 3
 restarttime = 04:30
 restartPeriod = 1
 
-file_name = 
-jsonname = 
-sheetname = 
-inputcell = 
-outputcell = 
+file_name = 리니지정산시트
+jsonname = lineagetake-10120b5ef748.json
+sheetname = 최종수령내역
+inputcell = E2
+outputcell = F2
