--- a/test_setting.ini
+++ b/test_setting.ini
@@ -16,6 +16,6 @@ restartPeriod = 1
 
 file_name = 리니지정산시트
 jsonname = lineagetake-10120b5ef748.json
-sheetname = 최종수령내역
-inputcell = E2
-outputcell = F2
+sheetname = 분배내역
+inputcell = H2
+outputcell = Q2
