--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,9 +1,9 @@
 timezone = 9
 
-voicechannel = 370919341853507604
-textchannel = 524877218191638538
-ladderchannel = 528399069912236045
-jungsanchannel = 549970626782167050
+voicechannel = 
+textchannel = 
+ladderchannel = 
+jungsanchannel = 
 
 before_alert = 1
 before_alert1 = 5
